--- a/Apps/Home/View/User/login.html
+++ b/Apps/Home/View/User/login.html
@@ -36,6 +36,7 @@
 				<button id="btn_login">立即登录</button>
 				<a href="#">忘记密码？</a>
 				<button id="btn_wxlogin">微信登录</button>
+				<button id="btn_qqlogin">QQ登录</button>
 			</form>
 			<img src="__PUBLIC__/images/login.png" alt="login">
 		</section>
@@ -49,6 +50,10 @@
 	$(function(){
 		$('#btn_wxlogin').click(function(){
 			location.href="{:U('wxlogin')}";
+			return false;
+		})
+		$('#btn_qqlogin').click(function(){
+			location.href="/weixin2/login.php/index/index";
 			return false;
 		})
 	})
